Added Bill Blower's write-up on Silents. Added Obituary for Lisa Jaserie.

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -119,14 +119,12 @@ function MM_swapImage() { //v3.0
 										<font size="5">The Friends Of Hart Park 
 										<br>
 										and the<br>
-&nbsp;William S. Hart Park &amp; Museum present:</font></span></span></p>
+&nbsp;William S. Hart Park &amp; Museum thank you for coming to:</font></span></span></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
-											<p align="center">
-											Join us on
 											<h3 align="center">
 											Saturday, July 29<sup>th</sup>, 
 											2017 at 6pm</h3></span></TD>
@@ -134,11 +132,9 @@ function MM_swapImage() { //v3.0
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-											<h3 align="center">Sold Out!</h3><br><br>
+											<br><h1 align="center">Pictures coming soon!</h1><br><br>
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 
-											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-											<font size="4">For additional info, Call<br>(661) 222&ndash;9542</font></p>
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											</TD>
 											</TR>
@@ -148,7 +144,42 @@ function MM_swapImage() { //v3.0
 													<tr>
 														<td colspan="2">
 											<p>
-											<B class="EVNTC">Just Announced!</B>
+<p>
+The 2017 edition of Silents Under The Stars was a magical, fun, grand time for 230
+delighted guests. Once again, this starlight evening, which has become the highlight
+event of FOHP's calendar year, lived up to its billing and more. 
+
+</p><p>Entertainment, provided
+by the Saguaro Sisters with Will Ryan, is still being talked about. 
+Wagon Tracks was not only the best quality film yet seen at an Evening Under
+The Stars event, but it also showcased Bill Hart's dramatic acting ability. And of course,
+what would the evening be without Ray Lowe's musical accompaniment, marvelous as
+always with his original scores? Ray's musical ability to make these silent classics come
+to life is considered so important that the evening was moved from its usual spot in the
+middle of August to July 29<sup>th</sup> to accommodate his schedule.
+
+</p><p>Highlights of the evening included an address by L. A. County Supervisor Kathryn Barger
+and a presentation to long-term park manager Norm Phillips for his years of service and
+his close cooperation with FOHP.
+
+</p><p>Sherron Blowers and her amazing committee are to be congratulated on the effort,
+planning, long hours, and frustration that go into the production of the evening.
+Without the talent, contacts, experience, dedication and persistence of five very
+committed people, the event most likely would not even exist. Planning began back in
+April, and the quality of the evening reflected the effort.
+
+</p><p>There are many ways to evaluate the success of an event. No matter how it is measured,
+every metric that can be applied to the evening of July 29 will register at or near 12 on a
+scale of one to ten.
+
+</p><p>And to put a cherry on top of the fun and enjoyment, proceeds from Silent Auction
+bidding and ticket sales exceeded last years record total, all of which will go toward the
+continuing maintenance and improvements at Hart Park.
+
+<i></p><p>Bill Blowers<br>
+8/5/2017</i>
+</p>
+											<B class="EVNTC">The Event!</B>
 <p>
 <h1 align="center" class="silents">Silents Under the Stars:</h1><br>
 <div>
