--- a/index.htm
+++ b/index.htm
@@ -350,13 +350,6 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     Click here </a> for more info!</h3>
                                     </p>
 -->
-<a href="Event_Pages/silents.html">
-<h3 align="center">See you tonight at this year's Silents Under the Stars!</h3>
-<img align="center" src="Event_Pages/silents/silents2017webflyer.jpg"/>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-</a>
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2017 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
@@ -364,20 +357,8 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturday, Jul. 29<sup>th</sup></td>
-                                      <td id="Event">
-                                    <a href="Event_Pages/silents.html">
-                                      Silents Under the Stars
-</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">
-                                      Fridays at dusk &mdash; 
-                                      June 30<sup>th</sup>, 
-                                      July 14<sup>th</sup>, 
-                                      July 28<sup>th</sup>, 
-                                      Aug. 18<sup>th</sup>
+                                      Friday, Aug. 18<sup>th</sup> at dusk
                                       </td>
                                       <td id="Event">
 <a href=        "Event_Pages/movies2017/eveningMovies.jpg" rel="lightbox[movies]">
@@ -447,6 +428,15 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     <td colspan="2">
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<h3 align="center">We are so sad to say good-bye to our dear friend, and fellow Friends of Hart Park board member, Lisa Jaserie.<br>
+<a href= "images/LisaJaserie.png" title="Lisa Jaseria Obituary" rel="lightbox[lisa]">
+<img src="images/lisa-hamblen-jaserie.jpg" />
+Click here</a> to see the official press release of her passing.  We will miss her kind smile, her good works, and her strong support of the Friends of Hart Park.
+</h3>
+
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
