Updated Roster, and removed past events

--- a/The_Friends/directors.html
+++ b/The_Friends/directors.html
@@ -142,7 +142,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                       border="0" height="385" width="2"> </td>
                   <td valign="top" width="876">
                     <div align="center"> <img
-                        src="images/board2014.jpg" border="0">
+                        src="images/FOHPboard2017.jpg" border="0">
                       <hr>
                       <table border="0" width="760">
                         <tbody>
@@ -168,15 +168,14 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director/Treasurer</td>
                             <td align="left"><br>
                             </td>
-                            <td id="BOLD" align="left">Bobbi Jean Bell<br>
+                            <td id="BOLD" align="left">Carol Frost<br>
                             </td>
                             <td align="left">Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Bob Hill<br>
+                            <td id="BOLD" align="left">Janis Ashley<br>
                             </td>
-                            <td align="left">Director/Volunteer
-                              President<br>
+                            <td align="left">Director<br>
                             </td>
                             <td align="left"><br>
                             </td>
@@ -190,15 +189,15 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director/Secretary</td>
                             <td align="left"><br>
                             </td>
-                            <td id="BOLD" align="left">Lisa Jaserie</td>
-                            <td align="left">Director</td>
+                            <td id="BOLD" align="left">Patti Rasmussen</td>
+                            <td align="left">Associate Director</td>
                           </tr>
                           <tr>
                             <td id="BOLD" align="left">Leon Worden</td>
                             <td align="left">Director</td>
                             <td align="left"><br>
                             </td>
-                            <td id="BOLD" align="left">Andree Walper<br>
+                            <td id="BOLD" align="left">Alexandra Gooch<br>
                             </td>
                             <td align="left">Director</td>
                           </tr>
@@ -217,7 +216,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left"><br>
                             </td>
                             <td id="BOLD" align="left">Gladys Farrell</td>
-                            <td align="left">Associate Director</td>
+                            <td align="left">Director</td>
                           </tr>
                           <tr>
                             <td id="BOLD" align="left">&nbsp;</td>
@@ -227,7 +226,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">&nbsp;</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Norm Phillips</td>
+                            <td id="BOLD" align="left">Eric Reifman</td>
                             <td align="left">Park Superintendent</td>
                             <td align="left">&nbsp;</td>
                             <td id="BOLD" align="left">Margi Bertram<br>
