Last Silents update, with train update

--- a/index.htm
+++ b/index.htm
@@ -360,9 +360,9 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                       <td id="EventDate">Saturday &amp; Sunday, 
                                       Sept. 9<sup>th</sup> &amp; 10<sup>th</sup></td>
                                       <td id="Event">
-                                      <a target="_blank" href="http://www.hdmmrc.com/events.php">
+<a href= "Event_Pages/train2017.png" title="High Desert Modular Model Train Show" rel="lightbox[train]">
                                       High Desert Modular Model Train Show
-                                      </a><span><img src="images/ExternalLink.png"/></span>
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
@@ -418,6 +418,16 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     <td colspan="2">
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<p align="center">
+<a target="_blank" href="https://www.facebook.com/media/set/?set=a.1508997075831897.1073741835.171859949545623&type=1&l=1ef6248f01">
+Click here <span><img src="images/ExternalLink.png"/></a></span>to see images from this year's 
+<a target="_blank" href="https://www.facebook.com/media/set/?set=a.1508997075831897.1073741835.171859949545623&type=1&l=1ef6248f01">
+<h2 align="center">Silents Under the Stars</h2></p>
+<img src="images/silents2017.jpg"/>
+</a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
