--- a/index.html
+++ b/index.html
@@ -350,21 +350,20 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     Click here </a> for more info!</h3>
                                     </p>
 -->
+<p align="center">
+<a href="Event_Pages/powwow.html">
+<img src="Event_Pages/powwow2017.png" />
+</a>
+</p>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2017 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-                                    <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, 
-                                      Sept. 9<sup>th</sup> &amp; 10<sup>th</sup></td>
-                                      <td id="Event">
-<a href= "Event_Pages/train2017.png" title="High Desert Modular Model Train Show" rel="lightbox[train]">
-                                      High Desert Modular Model Train Show
-                                      </a>
-                                      </td>
-                                    </tr>
                                     <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Sep. 30<sup>th</sup> &amp; Oct 1<sup>st</sup></td>
                                       <td id="Event">
