Added Holiday boutique flyer; removed old event.

--- a/index.htm
+++ b/index.htm
@@ -350,46 +350,12 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     Click here </a> for more info!</h3>
                                     </p>
 -->
-<p align="center">
-<a href="Event_Pages/powwow.html">
-<img src="Event_Pages/powwow2017.png" />
-</a>
-</p>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2017 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-                                    <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, Sep. 30<sup>th</sup> &amp; Oct 1<sup>st</sup></td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/powwow.html">
-                                      Pow Wow &amp; Native American Craft Fair
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Sunday, Oct. 8<sup>th</sup></td>
-                                      <td id="Event">
-                                      <a target="_blank" href="http://www.bowwowsandmeows.org/">
-                                      Bow Wows &amp; Meows pet fair
-                                      <span><img src="images/ExternalLink.png"/></span></a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                      Saturday &amp; Saturday Oct. 14<sup>th</sup> &amp; 15<sup>th</sup>
-                                      </td>
-                                      <td id="Event">
-                                      <a target="_blank" href="http://www.santaclaritaartists.org">
-                                      SCV Artists Association Arts Classic
-                                      <span><img src="images/ExternalLink.png"/></span></a>
-                                      </td>
-                                    </tr>
                                     <tr>
                                       <td id="EventDate">
                                       Saturday Nov. 4<sup>th</sup>
@@ -404,7 +370,9 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                       <td id="EventDate">Saturday &amp; 
                                         Sunday, Nov. 25<sup>th</sup>  &amp; 26<sup>th</sup></td>
                                       <td id="Event">
-                                      Hart Holiday Boutique
+<a href= "Event_Pages/holidayboutique2017.png" title="Hart Holiday Boutique" rel="lightbox[holiday]">
+                                      Hart Holiday Boutique &amp; Craft Fair
+</a>
                                       </td>
                                     </tr>
                                     <tr>
