--- a/index.html
+++ b/index.html
@@ -357,20 +357,10 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">
-                                      Saturday Nov. 4<sup>th</sup>
-                                      </td>
-                                      <td id="Event">
-                                      <a target="_blank" href="http://www.scvrs.homestead.com/roseshow.html">
-                                      SCV Rose Society annual rose show
-                                      <span><img src="images/ExternalLink.png"/></span></a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Saturday &amp; 
                                         Sunday, Nov. 25<sup>th</sup>  &amp; 26<sup>th</sup></td>
                                       <td id="Event">
-<a href= "Event_Pages/holidayboutique2017.png" title="Hart Holiday Boutique" rel="lightbox[holiday]">
+<a href= "Event_Pages/holidayboutique2017.png" title="Hart Holiday Boutique" rel="lightbox[boutique]">
                                       Hart Holiday Boutique &amp; Craft Fair
 </a>
                                       </td>
@@ -378,7 +368,9 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     <tr>
                                       <td id="EventDate">Saturday, Dec. 2<sup>nd</sup></td>
                                       <td id="Event">
+<a href= "Event_Pages/CowboysAndCarols2017.png" title="Cowboys and Carols" rel="lightbox[carols]">
                                       Cowboys &amp; Carols
+</a>
                                       </td>
                                     </tr>
                                     <tr>
