--- a/index.html
+++ b/index.html
@@ -263,38 +263,6 @@ Click below for photos of the <i>2017 Cowboys Festival</i> events that took plac
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
-                                <tr>
-                                <td>
-<h3 align="center"?>
-Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebration of Bill Hart's birthday<br>
-<a href=        "Event_Pages/cowboyscarols2016/Hart-0.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-0.jpg" /></a>
-<a href=        "Event_Pages/cowboyscarols2016/Hart-1.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-1.jpg" /></a>
-<a href=        "Event_Pages/cowboyscarols2016/Hart-2.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-2.jpg" /></a>
-<a href=        "Event_Pages/cowboyscarols2016/Hart-3.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-3.jpg" /></a>
-<a href=        "Event_Pages/cowboyscarols2016/Hart-4.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-4.jpg" /></a>
-<a href=        "Event_Pages/cowboyscarols2016/Hart-6.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-6.jpg" /></a>
-<a href=        "Event_Pages/cowboyscarols2016/Hart-8.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-8.jpg" /></a>
-<a href=        "Event_Pages/cowboyscarols2016/Hart-9.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-9.jpg" /></a>
-</h3>
-<sm>Photos courtesy of Museum Volunteer Coordinator David Paul</sm>
-                                </td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                        <font color="#FFCC00" size="6">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></font></b></i></td>
-                                </tr>
 <!--
                                 <tr>
                                   <td style="vertical-align: top;">
@@ -350,12 +318,17 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     Click here </a> for more info!</h3>
                                     </p>
 -->
-                                <h2>2017 Calendar of Events</h2>
+                                <h2>2018 Calendar of Events</h2>
+                                <h3>Stay tuned as dates become available</h3>
+<!--
                                 <h3>Click on links as details become available</h3>
+-->
+
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
+<!--
                                     <tr>
                                       <td id="EventDate">Saturday &amp; 
                                         Sunday, Nov. 25<sup>th</sup>  &amp; 26<sup>th</sup></td>
@@ -373,29 +346,27 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
 </a>
                                       </td>
                                     </tr>
-                                    <tr>
-                                    <td colspan="2">
+-->
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<p align="center">
-<a target="_blank" href="https://www.facebook.com/media/set/?set=a.1508997075831897.1073741835.171859949545623&type=1&l=1ef6248f01">
-Click here <span><img src="images/ExternalLink.png"/></a></span>to see images from this year's 
-<a target="_blank" href="https://www.facebook.com/media/set/?set=a.1508997075831897.1073741835.171859949545623&type=1&l=1ef6248f01">
-<h2 align="center">Silents Under the Stars</h2></p>
-<img src="images/silents2017.jpg"/>
-</a>
+<h3 align="center">Happy Holidays from the Friends of Hart Park!<br>
+<img src="images/HartWithChristmasTree.png" />
+</h3>
+
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<h3 align="center">We are so sad to say good-bye to our dear friend, and fellow Friends of Hart Park board member, Lisa Jaserie.<br>
-<a href= "images/LisaJaserie.png" title="Lisa Jaseria Obituary" rel="lightbox[lisa]">
-<img src="images/lisa-hamblen-jaserie.jpg" />
-Click here</a> to see the official press release of her passing.  We will miss her kind smile, her good works, and her strong support of the Friends of Hart Park.
-</h3>
-
+<p align="center">
+<a target="_blank" href="https://www.facebook.com/pg/friendsofhartpark/photos/?tab=album&album_id=1612230545508549">
+Click here <span><img src="images/ExternalLink.png"/></a></span>to see images from 2017's 
+<h2 align="center">Cowboys and Carols</h2></p>
+<a target="_blank" href="https://www.facebook.com/pg/friendsofhartpark/photos/?tab=album&album_id=1612230545508549">
+<img src="Event_Pages/CowboysCarols2017.jpg"/>
+</a>
+<!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
@@ -408,6 +379,7 @@ Click here</a> to see the official press release of her passing.  We will miss h
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+-->
                                     </td>
                                     </tr>
                                   </tbody>
